# seiran

./: Cargo.toml  LICENCE-MIT  README.md  rustfmt.toml  taplo.toml  text.txt
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/font/: Cargo.toml  build.rs
crates/font/src/: lib.rs  usedglyph.rs
crates/pdf_gen/: Cargo.toml
crates/pdf_gen/src/: lib.rs
crates/read_file/: Cargo.toml
crates/read_file/src/: lib.rs
